# whalecli

./: LICENSE  PLANNER_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  MODULES.md  ROADMAP.md  SKILL.md
examples/: agent_integration.py  basic_scan.py  stream_alerts.py
tests/: conftest.py  test_alert.py  test_alert_coverage.py  test_cli.py  test_cli_coverage.py  test_config.py  test_db.py  test_db_coverage.py  test_exceptions.py  test_fetchers.py  test_fetchers_coverage.py  test_fetchers_factory.py  test_models.py  test_output.py  test_output_coverage.py  test_scorer.py  test_stream.py  test_stream_coverage.py
whalecli/: __init__.py  alert.py  cli.py  config.py  db.py  exceptions.py  models.py  output.py  scorer.py  stream.py
whalecli/data/: exchange_addresses.json
whalecli/fetchers/: __init__.py  base.py  btc.py  eth.py  hl.py
whalecli/skill/: __init__.py  whalecli_skill.py
