[project]
name = "whalecli"
version = "0.1.0"
description = "Agent-native whale wallet tracker CLI for ETH and BTC chains"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alex Chen", email = "alex.chen31337@gmail.com"},
]
keywords = ["crypto", "whale", "blockchain", "ethereum", "bitcoin", "cli", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "toml>=0.10",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-asyncio",
    "respx",
]

[project.scripts]
whalecli = "whalecli.cli:cli"

[project.urls]
Homepage = "https://github.com/clawinfra/whalecli"
Documentation = "https://github.com/clawinfra/whalecli/tree/main/docs"
Repository = "https://github.com/clawinfra/whalecli"
Issues = "https://github.com/clawinfra/whalecli/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["whalecli", "whalecli.fetchers", "whalecli.skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=whalecli --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["whalecli"]
omit = [
    "tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
