[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whalecli"
version = "0.1.0"
description = "Agent-native whale wallet tracker for ETH and BTC chains"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Chen", email = "alex.chen31337@gmail.com" }
]
keywords = [
    "blockchain", "whale", "ethereum", "bitcoin", "crypto",
    "on-chain", "agent", "cli", "monitoring"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "toml>=0.10",
    "aiosqlite>=0.20",
    "bech32>=1.2",        # Bitcoin bech32 address validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-asyncio>=0.23",
    "respx>=0.21",          # httpx mock library
    "ruff>=0.4",
    "black>=24",
    "mypy>=1.9",
    "isort>=5.13",
]

[project.scripts]
whalecli = "whalecli.cli:cli"

[project.urls]
Homepage = "https://github.com/clawinfra/whalecli"
Repository = "https://github.com/clawinfra/whalecli"
Issues = "https://github.com/clawinfra/whalecli/issues"
Documentation = "https://github.com/clawinfra/whalecli/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["whalecli"]

# ============================================================
# Pytest Configuration
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=whalecli",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
    "-v",
]

# ============================================================
# Coverage Configuration
# ============================================================
[tool.coverage.run]
source = ["whalecli"]
omit = [
    "whalecli/skill/*",    # Skill wrapper excluded from core coverage
    "tests/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ============================================================
# Ruff (Linting)
# ============================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # type annotations
    "S",    # bandit security
    "RUF",  # ruff-specific
]
ignore = [
    "S101",    # assert usage (allowed in tests)
    "ANN401",  # Dynamically typed expressions (Any) — needed for flexible APIs
    "RUF001",  # ambiguous unicode char — false positives in comments
    "RUF002",  # ambiguous unicode char — false positives in comments
    "RUF003",  # ambiguous unicode char — false positives in comments
    "E741",    # ambiguous variable name — l, O, I used intentionally
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

# ============================================================
# Black (Formatting)
# ============================================================
[tool.black]
target-version = ["py311"]
line-length = 100

# ============================================================
# Mypy (Type Checking)
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
